# zephyr-pico-softstart

./: CLAUDE.md  CMakeLists.txt  Doxyfile  Makefile  README.md  prj.conf  pytest.ini  west.yml
boards/: rpi_pico.overlay
docs/: SOFTSTART_SPEC.md  adc_streaming_spec.md
scripts/: .gitignore  gui.py  hardware_config.py  protocol.py  requirements.txt  test_adc.py  test_adc_stream.py  test_pwm.py  test_stream_start_stop.py
scripts/gui/: __init__.py  app.py  autotuner.py  callbacks.py  constants.py  main.py  utils.py  widgets.py
src/: main.c
src/modules/adc_reader/: CMakeLists.txt  Kconfig  adc_reader.c  adc_reader.h
src/modules/adc_stream/: adc_stream.c  adc_stream.h
src/modules/drivers/: adc_ctrl.c  adc_ctrl.h  led_pwm.c  led_pwm.h
src/modules/oled_display/: oled_display.c  oled_display.h
src/modules/p_controller/: CMakeLists.txt  INTEGRATION.md  Kconfig  README.md  p_controller.c  p_controller.h
src/modules/protocol/: protocol.c  protocol.h
src/modules/ringbuf/: ringbuf.c  ringbuf.h
src/modules/threads/: rx_thread.c  rx_thread.h  tx_thread.c  tx_thread.h
src/modules/tx_buffer/: tx_buffer.c  tx_buffer.h
tests/: conftest.py  test_hardware_config.py  test_protocol.py
tests/gui/: test_gui_app.py  test_gui_constants.py  test_gui_handlers.py  test_gui_utils.py
